--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-ecdsa==0.18.0
-fastapi==0.91.0
-nacl==0.0.0
-pydantic==1.10.4
-PyJWT==2.6.0
-PyNaCl==1.5.0
-pyOpenSSL==23.0.0
-python_bcrypt==0.3.2
-SQLAlchemy==1.4.46
-uvicorn==0.20.0
+ecdsa~=0.18
+fastapi~=0.92
+pydantic~=1.10
+PyJWT~=2.6
+PyNaCl~=1.5.0
+pyOpenSSL~=23.0
+SQLAlchemy~=2.0
+uvicorn~=0.20
