--- a/.github/ISSUE_TEMPLATE/endpoint_needed.yml
+++ b/.github/ISSUE_TEMPLATE/endpoint_needed.yml
@@ -7,19 +7,18 @@ assignees:
 body:
   - type: markdown
     attributes:
-      value: |
+      value: >
         Thanks for taking the time to fill out this bug report!
   - type: markdown
     id: new-endpoint-description
     attributes:
       label: What do you expect?
       description: Describe exactly what you expect and in what form.
-      placeholder: |
+      placeholder: >
         Example of description
         As a user, I expect that after sending a POST to example.com/register
         with the registration data, I will receive a message whether the action
         was successful or not together with the reason for the error.
-      value: "Endpoint needed"
     validations:
       required: true
   - type: textarea
@@ -27,7 +26,7 @@ body:
     attributes:
       label: Expected input
       description: What you want to send as a URL or as a body.
-      placeholder: |
+      placeholder: >
         Example of description
         \{
           "login": "test@test.test",
@@ -38,7 +37,7 @@ body:
     attributes:
       label: Expected output
       description: What you want to receive after processing the request.
-      placeholder: |
+      placeholder: >
         Example of description
         "http code: 200 ok"
         "detail: register success"
