--- a/.github/ISSUE_TEMPLATE/endpoint_needed.yml
+++ b/.github/ISSUE_TEMPLATE/endpoint_needed.yml
@@ -9,7 +9,7 @@ body:
     attributes:
       value: >
         Thanks for taking the time to fill out this bug report!
-  - type: markdown
+  - type: textarea
     id: new-endpoint-description
     attributes:
       label: What do you expect?
