added assignes and improve tag

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,7 +1,10 @@
-name: Bug Report
+name: Bug report
 description: Create a bug report
+title: "[Bug] "
+assignees:
+  - mateuszmiekicki
 labels:
-  - 'kind: bug'
+  - 'bug'
 body:
   - type: markdown
     attributes:
