added config and unit test for config

--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,8 @@ poetry.toml
 
 private/*
 !private/.gitkeep
+
+
+configuration/private/*
+!configuration/private/.gitkeep
+!configuration/private/template
