update default template with db config

--- a/configuration/private/template/databases.properties
+++ b/configuration/private/template/databases.properties
@@ -6,8 +6,8 @@ databases:
         user_name: ${FROG_DATABASE_USER:frog}
         password: ${FROG_DATABASE_PASSWORD:frog!123}
     questdb:
-        hostname: ${FROG_DATABASE_ADDRESS:localhost}
-        port: ${FROG_DATABASE_PORT:5400}
+        hostname: ${FROG_DATABASE_ADDRESS:questdb}
+        port: ${FROG_DATABASE_PORT:8812}
         database_name: ${FROG_DATABASE_DB_NAME:frog}
         user_name: ${FROG_DATABASE_USER:frog}
         password: ${FROG_DATABASE_PASSWORD:frog!123}
