--- a/configuration/private/template/databases.properties
+++ b/configuration/private/template/databases.properties
@@ -8,6 +8,6 @@ databases:
     questdb:
         hostname: ${FROG_DATABASE_ADDRESS:questdb}
         port: ${FROG_DATABASE_PORT:8812}
-        database_name: ${FROG_DATABASE_DB_NAME:frog}
-        user_name: ${FROG_DATABASE_USER:frog}
+        database_name: ${FROG_DATABASE_DB_NAME:qdb}
+        user_name: ${FROG_DATABASE_USER:frogReadOnly}
         password: ${FROG_DATABASE_PASSWORD:frog!123}
