--- a/configuration/private/template/mailer.properties
+++ b/configuration/private/template/mailer.properties
@@ -1,5 +1,5 @@
 mailer:
-    hostname: ${MAILER_HOSTNAME:localhost}
+    hostname: ${MAILER_HOSTNAME:smtp}
     port: ${MAILER_PORT:25}
     user_name: ${MAILER_USER_NAME:frog}
     password: ${MAILER_PASSWORD:frog!123}
