change database name

--- a/configuration/private/template/databases.properties
+++ b/configuration/private/template/databases.properties
@@ -2,7 +2,7 @@ databases:
     postgresql:
         hostname: ${FROG_DATABASE_ADDRESS:postgresql}
         port: ${FROG_DATABASE_PORT:5432}
-        database_name: ${FROG_DATABASE_DB_NAME:frog}
+        database_name: ${FROG_DATABASE_DB_NAME:smart-terrarium}
         user_name: ${FROG_DATABASE_USER:frog}
         password: ${FROG_DATABASE_PASSWORD:frog!123}
     questdb:
