added config for requester

--- a/configuration/private/template/frog.properties
+++ b/configuration/private/template/frog.properties
@@ -2,3 +2,6 @@ frog:
     hostname: ${FROG_HOST:0.0.0.0}
     port: ${FROG_PORT:8000}
     log_level: debug
+    requester_host: ${REQUESTER_HOST:toad}
+    requester_port: ${REQUESTER_PORT:5571}
+    requester_timeout: ${REQUESTER_TIMEOUT:5}
